topic: initial page

--- a/templates/home_item_list.html
+++ b/templates/home_item_list.html
@@ -133,12 +133,10 @@
         </a>
         <div class="header-nav">
             <ul class="nav-menu">
-                <li id="nav-course">
-                    <span>SI Course</span>
-                </li>
-                <li id="nav-library">SI Library</li>
+                <li id="nav-course">SI Course</li>
+                <li id="nav-library"><a href="/home/libraries">SI Library</a></li>
                 <li id="nav-learning">SI Learning Event</li>
-                <li id="nav-topic">SI Topic</li>
+                <li id="nav-topic"><a href="/home/topic">SI Topic</a></li>
             </ul>
             <div class="nav-search">
                 <input type="text">
