learning: initial page

--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -493,9 +493,9 @@
         <div class="header-nav">
             <ul class="nav-menu">
                 <li>SI Course</li>
-                <li><a href="/home/libraries">SI Library</a></li>
-                <li>SI Learning Event</li>
-                <li>SI Topic</li>
+                <li><a href="#section-library">SI Library</a></li>
+                <li><a href="#section-learning">SI Learning Event</a></li>
+                <li><a href="#section-topic">SI Topic</a></li>
             </ul>
             <div class="nav-search">
                 <input type="text">
@@ -589,10 +589,10 @@
                 </div>
             </div>
 
-            <div class="section-library">
+            <div id="section-library" class="section-library">
                 <div class="section-title">
                     <h2>SI Library</h2>
-                    <span>See All ></span>
+                    <span><a href="/home/libraries">See All ></a></span>
                 </div>
                 <div class="container">
                     <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 20 20"><path fill="currentColor" d="M10 0c5.523 0 10 4.477 10 10s-4.477 10-10 10S0 15.523 0 10S4.477 0 10 0m.788 5.646l-3.87 3.971a.682.682 0 0 0 .005.957l3.87 3.895a.682.682 0 1 0 .967-.961l-3.397-3.42l3.402-3.49a.682.682 0 1 0-.977-.952"/></svg>
@@ -646,10 +646,10 @@
             </div>
 
             <div class="twin-container">
-                <div class="section-learning">
+                <div id="section-learning" class="section-learning">
                     <div class="section-title">
                         <h2>SI Learning Event</h2>
-                        <span>See All ></span>
+                        <span><a href="/home/learning">See All ></a></span>
                     </div>
                     <div class="items-container">
 
@@ -728,10 +728,10 @@
 
                     </div>
                 </div>
-                <div class="section-topic">
+                <div id="section-topic" class="section-topic">
                     <div class="section-title">
                         <h2>SI Topic</h2>
-                        <span>See All ></span>
+                        <span><a href="/home/topic">See All ></a></span>
                     </div>
                     <div class="items-container">
 
