--- a/templates/home_item_list.html
+++ b/templates/home_item_list.html
@@ -135,7 +135,7 @@
             <ul class="nav-menu">
                 <li id="nav-course">SI Course</li>
                 <li id="nav-library"><a href="/home/libraries">SI Library</a></li>
-                <li id="nav-learning">SI Learning Event</li>
+                <li id="nav-learning"><a href="/home/learning">SI Learning Event</a></li>
                 <li id="nav-topic"><a href="/home/topic">SI Topic</a></li>
             </ul>
             <div class="nav-search">
