course: initial page

--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -492,7 +492,7 @@
         </div>
         <div class="header-nav">
             <ul class="nav-menu">
-                <li>SI Course</li>
+                <li><a href="#section-course">SI Course</a></li>
                 <li><a href="#section-library">SI Library</a></li>
                 <li><a href="#section-learning">SI Learning Event</a></li>
                 <li><a href="#section-topic">SI Topic</a></li>
@@ -515,9 +515,9 @@
             <div class="banner-separator">
                 <img src="{% static 'images/13309.png' %}" alt="banner_separator">
             </div>
-            <div class="section-course">
+            <div id="section-course" class="section-course">
                 <h2>SI Course</h2>
-                <span>See All ></span>
+                <span><a href="/home/course">See All ></a></span>
                 <div class="items-container">
 
                     <div class="course-item">
