--- a/templates/home.html
+++ b/templates/home.html
@@ -214,6 +214,8 @@
 
         .course-footer > span {
             font-weight: bold;
+            color: #004080;
+            margin: 6px 0;
         }
 
         .course-footer > button {
