--- a/templates/main_layout.html
+++ b/templates/main_layout.html
@@ -122,6 +122,10 @@
             align-items: center;
             gap: 10px;
         }
+
+        .mb-3 {
+            margin-bottom: 3rem !important;
+        }
     </style>
     {% block 'head' %}
     {% endblock 'head' %}
@@ -133,7 +137,7 @@
         </a>
         <div class="header-nav">
             <ul class="nav-menu">
-                <li id="nav-course">SI Course</li>
+                <li id="nav-course"><a href="/home/course">SI Course</a></li>
                 <li id="nav-library"><a href="/home/libraries">SI Library</a></li>
                 <li id="nav-learning"><a href="/home/learning">SI Learning Event</a></li>
                 <li id="nav-topic"><a href="/home/topic">SI Topic</a></li>
@@ -150,9 +154,11 @@
     </header>
     <main>
         <div class="main-container">
+            {% if not disableBanner %}
             <div class="banner-main">
                 <img src="{% static 'images/12851.jpg' %}" alt="banner_img_1">
             </div>
+            {% endif %}
             {% block 'content' %}
             {% endblock 'content' %}
             {% if not disablePagination %}
