--- a/templates/main_layout.html
+++ b/templates/main_layout.html
@@ -97,7 +97,7 @@
             display: flex;
             flex-direction: column;
             gap: 8px;
-            max-width: 1200px;
+            width: 100%;
             padding: 0 16px;
         }
 
@@ -125,6 +125,12 @@
 
         .mb-3 {
             margin-bottom: 3rem !important;
+        }
+
+        @media only screen and (min-width: 1200px) {
+            .main-container {
+                width: 1200px;
+            }
         }
     </style>
     {% block 'head' %}
