--- a/templates/main_layout.html
+++ b/templates/main_layout.html
@@ -9,6 +9,7 @@
 
     <style>
         body {
+            background-color: rgb(243, 249, 255);
             margin: 0;
         }
 
@@ -18,10 +19,11 @@
         }
 
         header {
+            background-color: white;
             display: flex;
             justify-content: space-between;
             align-items: center;
-            padding: 0.6rem 3rem;
+            padding: 0 3rem;
             padding-top: 0;
         }
 
@@ -80,7 +82,7 @@
             height: 40px;
             width: 40px;
             object-fit: cover;
-            border-radius: 50px;
+            border-radius: 50%;
             margin-right: 0.8rem;
         }
 
@@ -91,6 +93,9 @@
             font-family: "Lato", sans-serif;
             font-weight: 400;
             font-style: normal;
+
+            padding-top: 1.6rem;
+            padding-bottom: 2rem;
         }
 
         .main-container{
@@ -152,22 +157,22 @@
                 <input type="text">
                 <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24"><path fill="currentColor" d="m19.6 21l-6.3-6.3q-.75.6-1.725.95T9.5 16q-2.725 0-4.612-1.888T3 9.5q0-2.725 1.888-4.612T9.5 3q2.725 0 4.613 1.888T16 9.5q0 1.1-.35 2.075T14.7 13.3l6.3 6.3zM9.5 14q1.875 0 3.188-1.312T14 9.5q0-1.875-1.312-3.187T9.5 5Q7.625 5 6.313 6.313T5 9.5q0 1.875 1.313 3.188T9.5 14"/></svg>
             </div>
-            <div class="nav-profile">
+            <a href="/dashboard" class="nav-profile">
                 <img src="https://img.freepik.com/premium-photo/happy-laughing-face-ordinary-man-grey-shirt-concept-charming-laugh_39688-2667.jpg?w=996" alt="profile_image">
                 <span>Dendi</span>
-            </div>
+            </a>
         </div>
     </header>
     <main>
         <div class="main-container">
-            {% if not disableBanner %}
+            {% if showBanner %}
             <div class="banner-main">
                 <img src="{% static 'images/12851.jpg' %}" alt="banner_img_1">
             </div>
             {% endif %}
             {% block 'content' %}
             {% endblock 'content' %}
-            {% if not disablePagination %}
+            {% if showPagination %}
             <div class="section-pagination">
                 <div class="pagination">
                     <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24"><path fill="currentColor" d="m14 18l-6-6l6-6l1.4 1.4l-4.6 4.6l4.6 4.6z"/></svg>
