--- a/templates/main_layout.html
+++ b/templates/main_layout.html
@@ -128,6 +128,14 @@
             gap: 10px;
         }
 
+        .mb-1 {
+            margin-bottom: 1rem !important;
+        }
+
+        .mb-2 {
+            margin-bottom: 2rem !important;
+        }
+
         .mb-3 {
             margin-bottom: 3rem !important;
         }
